--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello internet
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Chris Antaki - Musician & Engineer</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+        <div class="table">
+            <div class="table-cell">
+                <div class="card box-sizing">
+                    <p>
+                        Here's my <a href="https://soundcloud.com/chrisantaki">SoundCloud</a><br>
+                        Here's my <a href="https://github.com/chrisantaki">GitHub</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <script data-main="js/main" src="js/vendor/require.js"></script>
+
+        <script type="text/javascript">
+            window._idl = {};
+            _idl.variant = "banner";
+            (function() {
+                var idl = document.createElement('script');
+                idl.type = 'text/javascript';
+                idl.async = true;
+                idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+                document.getElementsByTagName('body')[0].appendChild(idl);
+            })();
+        </script>
+
+    </body>
+</html>
