--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Chris Antaki - Musician & Engineer</title>
+        <title>Chris Antaki</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="stylesheet" href="css/main.css">
@@ -13,8 +13,8 @@
             <div class="table-cell">
                 <div class="card box-sizing">
                     <p>
-                        Here's my <a href="https://soundcloud.com/chrisantaki">SoundCloud</a><br>
                         Here's my <a href="https://github.com/chrisantaki">GitHub</a>
+                        Here's my <a href="https://soundcloud.com/chrisantaki">SoundCloud</a><br>
                     </p>
                 </div>
             </div>
