--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
             <div class="table-cell">
                 <div class="card box-sizing">
                     <p>
-                        Here's my <a href="https://github.com/chrisantaki">GitHub</a>
+                        <strong>Chris Antaki</strong>
                         <br>
-                        Here's my <a href="https://soundcloud.com/chrisantaki">SoundCloud</a><br>
+                        <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
+                        <br>
+                        <a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
+                        <br>
+                        <a href="https://github.com/chrisantaki">GitHub</a>
                     </p>
                 </div>
             </div>
