--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
                 <div class="card box-sizing">
                     <p>
                         <strong>Chris Antaki</strong>
-                        <br>
                         <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
-                        <br>
                         <a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
-                        <br>
+                        <a href="https://twitter.com/cantaki">Twitter</a>
                         <a href="https://github.com/chrisantaki">GitHub</a>
                     </p>
                 </div>
