--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </div>
         </div>
 
-        <script data-main="js/main" src="js/vendor/require.js"></script>
+        <canvas id="world"></canvas>
+
+        <script src="js/confetti.js"></script>
 
         <script type="text/javascript">
             window._idl = {};
