--- a/index.html
+++ b/index.html
@@ -27,17 +27,33 @@
 
         <script src="js/confetti.js"></script>
 
-        <script type="text/javascript">
-            window._idl = {};
-            _idl.variant = "banner";
-            (function() {
-                var idl = document.createElement('script');
-                idl.type = 'text/javascript';
-                idl.async = true;
-                idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
-                document.getElementsByTagName('body')[0].appendChild(idl);
-            })();
-        </script>
+<script type="text/javascript">
+window._idl = {};
+_idl.variant = "banner";
+(function() {
+var idl = document.createElement('script');
+idl.type = 'text/javascript';
+idl.async = true;
+idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+document.getElementsByTagName('body')[0].appendChild(idl);
+})();
+</script>
+
+<!-- Piwik -->
+<script type="text/javascript">
+var _paq = _paq || [];
+_paq.push(['trackPageView']);
+_paq.push(['enableLinkTracking']);
+(function() {
+var u="//statistics.chrisantaki.com/";
+_paq.push(['setTrackerUrl', u+'piwik.php']);
+_paq.push(['setSiteId', 1]);
+var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+})();
+</script>
+<noscript><p><img src="//statistics.chrisantaki.com/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+<!-- End Piwik Code -->
 
     </body>
 </html>
