--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="utf-8">
 
     <style>
+    @font-face {
+        font-family: 'SF Distant Galaxy';
+        src: url('./fonts/sf_distant_galaxy-webfont.eot');
+        src: url('./fonts/sf_distant_galaxy-webfont.eot?#iefix') format('embedded-opentype'),
+             url('./fonts/sf_distant_galaxy-webfont.woff2') format('woff2'),
+             url('./fonts/sf_distant_galaxy-webfont.woff') format('woff'),
+             url('./fonts/sf_distant_galaxy-webfont.ttf') format('truetype'),
+             url('./fonts/sf_distant_galaxy-webfont.svg#sf_distant_galaxyregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
+    }
+
     html, body {
         background-color: black;
         height: 100%;
+        font-family: 'SF Distant Galaxy', sans-serif;
         margin: 0;
         overflow: hidden;
         width: 100%;
@@ -32,7 +45,6 @@
 
     div.card {
         color: #fff;
-        font-family: Verdana, sans-serif;
         font-size: 20px;
         margin: 0 auto 32px;
         padding: 0 16px;
@@ -42,7 +54,7 @@
     div.card h2 {
         font-size: 32px;
         letter-spacing: 2px;
-        margin: 32px 0 24px;
+        margin: 32px 0 8px;
     }
 
     div.card a {
@@ -50,6 +62,7 @@
         display: inline-block;
         line-height: 2;
         padding: 0 4px;
+        text-decoration: none;
 
         -webkit-transition: color 0.3s;
                 transition: color 0.3s;
@@ -70,8 +83,8 @@
 
 <div class="card">
     <h2>Chris Antaki</h2>
-    <a href="https://github.com/chrisantaki">GitHub</a>
-    <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
+    <a href="https://github.com/chrisantaki">Code</a>
+    <a href="https://soundcloud.com/chrisantaki">Music</a>
 </div>
 
 <div class="chemicals"></div>
