--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Chris Antaki (New)</title>
+<title>Chris Antaki</title>
 <link rel="shortcut icon" href="./favicon.ico">
 <style>
 * {
@@ -66,12 +66,12 @@ section {
 </div>
 </header>
 
-<!-- f😉ld -->
+<!-- The f😉ld -->
 <link rel="stylesheet" href="./css/homepage.css">
 <section class="particles"></section>
 <script src="./js/homepage.js"></script>
 
-<!-- prefetching -->
+<!-- Prefetching -->
 <link rel="dns-prefetch" href="https://github.com/">
 <link rel="dns-prefetch" href="https://www.linkedin.com/">
 <link rel="dns-prefetch" href="https://soundcloud.com/">
