Refactoring HTML & JavaScript

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Chris Antaki</title>
 <link rel="shortcut icon" href="./favicon.ico">
+<!-- Above the f😉ld -->
 <style>
 * {
     box-sizing: border-box;
@@ -19,8 +20,10 @@ header {
     color: #fff;
     font-family: sans-serif;
     letter-spacing: .5px;
+    position: relative;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+    z-index: 1;
 }
 header h1 {
     display: block;
@@ -54,25 +57,18 @@ section {
     display: none;
 }
 </style>
-
 <header>
-<h1>Chris Antaki</h1>
-<div class="links">
-<a href="https://github.com/chrisantaki">GitHub</a>
-<span class="dot">&middot;</span>
-<a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
-<span class="dot">&middot;</span>
-<a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
-</div>
+    <h1>Chris Antaki</h1>
+    <div class="links">
+        <a href="https://github.com/chrisantaki">GitHub</a>
+        <span class="dot">&middot;</span>
+        <a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
+        <span class="dot">&middot;</span>
+        <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
+    </div>
 </header>
 
-<!-- The f😉ld -->
+<!-- Below the f😉ld -->
 <link rel="stylesheet" href="./css/homepage.css">
 <section class="particles"></section>
 <script src="./js/homepage.js"></script>
-
-<!-- Prefetching -->
-<link rel="dns-prefetch" href="https://github.com/">
-<link rel="dns-prefetch" href="https://www.linkedin.com/">
-<link rel="dns-prefetch" href="https://soundcloud.com/">
-
