Vertically centering header, using var instead of const + let

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=360">
 <title>Chris Antaki</title>
 <link rel="shortcut icon" href="./favicon.ico">
 
@@ -20,10 +20,13 @@ body {
 header {
     color: #fff;
     font-family: sans-serif;
+    height: 106px;
     letter-spacing: .5px;
-    position: relative;
+    position: absolute;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+    top: calc((100% - 140px) / 2);
+    width: 100%;
     z-index: 1;
 }
 header h1 {
