Adding html opening tag with inline background color style

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html style="background-color: #08f;">
 <meta charset="utf-8">
 <meta name="viewport" content="width=360">
 <title>Chris Antaki</title>
@@ -13,7 +14,6 @@ html {
     min-height: 100%;
 }
 body {
-    background-color: #08f;
     margin: 0;
     min-height: 100%;
 }
@@ -62,14 +62,14 @@ section {
 }
 </style>
 <header>
-    <h1>Chris Antaki</h1>
-    <div class="links">
-        <a href="https://github.com/chrisantaki">GitHub</a>
-        <span class="dot">&middot;</span>
-        <a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
-        <span class="dot">&middot;</span>
-        <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
-    </div>
+<h1>Chris Antaki</h1>
+<div class="links">
+<a href="https://github.com/chrisantaki">GitHub</a>
+<span class="dot">&middot;</span>
+<a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
+<span class="dot">&middot;</span>
+<a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
+</div>
 </header>
 
 <!-- Below the f😉ld -->
