--- a/index.html
+++ b/index.html
@@ -20,25 +20,26 @@ body {
 header {
     color: #fff;
     font-family: sans-serif;
-    height: 106px;
     letter-spacing: .5px;
     position: absolute;
     text-align: center;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
-    top: calc((100% - 140px) / 2);
+    top: calc((100% - 80px) / 2);
     width: 100%;
     z-index: 1;
 }
 header h1 {
+    background-image: -webkit-linear-gradient(
+        270deg,
+        #fff 50%,
+        #bff
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     display: block;
     margin: 0 auto 4px;
     max-width: 240px;
-    padding: 24px 20px 0;
 }
-header .links {
-    text-shadow: none;
-    padding: 0 0 8px;
-}
+header .links {}
 header .links a {
     color: #fff;
     display: inline-block;
@@ -47,11 +48,7 @@ header .links a {
     letter-spacing: 1px;
     padding: 8px;
     text-decoration: none;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
     transition: text-shadow 0.3s;
-}
-header .links a:hover {
-    text-shadow: 0 2px 9px rgba(0, 0, 0, 0.6);
 }
 header .links .dot {
     font-size: 16px;
