--- a/index.html
+++ b/index.html
@@ -1,105 +1,98 @@
 <!doctype html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<title>Chris Antaki</title>
-<link rel="shortcut icon" href="./favicon.ico?c=2">
+<html ⚡>
 
-<!-- Above the f😉ld -->
-<style>
-* {
-    box-sizing: border-box;
-}
-html,
-body {
-    background-color: #08f;
-    margin: 0;
-    min-height: 100%;
-}
-header {
-    color: #fff;
-    font-family: sans-serif;
-    letter-spacing: 3px;
-    letter-spacing: 0.3vw;
-    position: absolute;
-    text-align: center;
-    top: calc((100% - 160px) / 2);
-    top: calc((100% - 18vw) / 2);
-    width: 100%;
-    z-index: 1;
-}
-header h1 {
-    background-image: -webkit-linear-gradient(
-        270deg,
+<head>
+  <meta charset="utf-8">
+  <title>It's me, Chris Antaki</title>
+  <link rel="shortcut icon" href="./favicon.ico">
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <link rel="canonical" href="https://www.chrisantaki.com/">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+  <style amp-custom>
+    * {
+      box-sizing: border-box;
+    }
+  
+    html,
+    body {
+      background: linear-gradient(215deg, #09f, #f09);
+      display: flex;
+      margin: 0;
+      min-height: 100%;
+      width: 100%;
+    }
+  
+    header {
+      color: rgba(255, 255, 255, 0.4);
+      font-family: sans-serif;
+      letter-spacing: 0.3vw;
+      margin: auto;
+      text-align: center;
+      width: 100%;
+      z-index: 1;
+    }
+  
+    header h1 {
+      background-image: linear-gradient(180deg,
         #fff 50%,
-        #7ff
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    display: block;
-    font-size: 64px;
-    font-size: 10vw;
-    margin: 0 auto 8px;
-    margin: 0 auto 0.4vw;
-}
-header .links {
-    font-size: 24px;
-    font-size: 4vw;
-    letter-spacing: 0.5px;
-    letter-spacing: 0.2vw;
-}
-
-header .links a {
-    background-image: -webkit-linear-gradient(
-        270deg,
+        #7ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      display: block;
+      font-size: 8vw;
+      margin: 0 auto 0.4vw;
+    }
+  
+    header .links {
+      font-size: 4vw;
+      letter-spacing: 0.2vw;
+    }
+  
+    header .links a {
+      background-image: linear-gradient(180deg,
         #fff 50%,
-        #5ff
-    );
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: #fff;
-    display: inline-block;
-    font-weight: bold;
-    padding: 8px;
-    padding: 0.8vw;
-    text-decoration: none;
-    transition: background-size 0.32s ease-out;
-}
+        #5ff);
+      background-size: 100%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      color: #fff;
+      display: inline-block;
+      font-weight: bold;
+      padding: 0.8vw;
+      text-decoration: none;
+    }
+  
+    header .links a:hover {
+      background-image: linear-gradient(180deg,
+        #ffe 50%,
+        #ff7);
+    }
+  
+    header .links .dot {
+      font-size: 1.2em;
+      font-weight: bold;
+      position: relative;
+      top: 0.2vw;
+    }
+  
+    section {
+      display: none;
+    }
+  </style>
+</head>
 
-header .links a:hover {
-    background-size: 120%;
-}
+<body>
+  <header>
+    <h1>Chris Antaki</h1>
+    <div class="links">
+      <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
+      <span class="dot">&middot;</span>
+      <a href="https://github.com/chrisantaki">GitHub</a>
+      <span class="dot">&middot;</span>
+      <a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
+    </div>
+  </header>
+</body>
 
-header .links .dot {
-    font-size: 1.2em;
-    font-weight: bold;
-    position: relative;
-    top: 2px;
-    top: 0.2vw;
-}
-section {
-    display: none;
-}
-</style>
-<script>
-var stylesAreLoaded = false;
-function onLoadStyles() {
-    stylesAreLoaded = true;
-}
-</script>
-<link class="styles" rel="stylesheet" href="./css/homepage.css?c=2" media="none" onload="onLoadStyles()">
-
-<header>
-<h1>Chris Antaki</h1>
-<div class="links">
-<a href="https://github.com/chrisantaki">GitHub</a>
-<span class="dot">&middot;</span>
-<a href="https://www.linkedin.com/in/chrisantaki">LinkedIn</a>
-<span class="dot">&middot;</span>
-<a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
-</div>
-</header>
-
-<!-- Below the f😉ld -->
-<section class="particles"></section>
-<script src="./js/homepage.js?c=2" async></script>
+</html>
