--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>It's me, Chris Antaki</title>
+  <meta name="description" content="Chris Antaki's eponymous homepage.">
   <link rel="shortcut icon" href="./favicon.ico">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <link rel="canonical" href="https://www.chrisantaki.com/">
