--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
       }
 
       header h1 {
+        border-bottom: 0.5vw solid rgba(255, 255, 255, 0.1);
         color: #fff;
-        text-shadow: 1vw 1vw 3vw rgba(0, 0, 255, 0.3);
         display: block;
         font-size: 5vw;
         margin: 0 auto 2vw;
         padding: 0 0 3vw;
-        border-bottom: 0.5vw solid rgba(255, 255, 255, 0.1);
+        text-shadow: 0.5vw 0.5vw 1.5vw rgba(0, 0, 255, 0.125),
+          1vw 1vw 3vw rgba(0, 0, 255, 0.125);
       }
 
       header .links {
@@ -110,7 +111,7 @@
       }
 
       header .links a {
-        background-image: linear-gradient(181deg, #cff 50%, #0ff);
+        background-image: linear-gradient(181deg, #aff 50%, #0ff);
         background-size: 100%;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -124,7 +125,7 @@
       header .links a:hover,
       header .links a:focus,
       header .links a:active {
-        background-image: linear-gradient(181deg, #9ff 50%, #0ff);
+        background-image: linear-gradient(181deg, #6ff 50%, #0ff);
       }
 
       header .links .dot {
@@ -156,7 +157,7 @@
           width="17.5vw"
           height="10vw"
         ></amp-img>
-        Stay safe!
+        Stay safe
       </h1>
 
       <div class="links">
