Updates image title

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
   <body>
     <header>
       <h1>
-        <img alt="Chris Antaki" title="Hay" src="cloud.gif" />
+        <img
+          alt="Chris Antaki"
+          title="Hey! Check out my links below"
+          src="cloud.gif"
+        />
       </h1>
 
       <div class="links">
