--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
       }
 
       header .links a {
-        color: rgba(255, 255, 255, 0.8);
+        color: rgb(30, 200, 255);
         display: block;
         padding: 1.4vmin;
-        transition: color 0.1s;
-        text-decoration: none;
+        transition: color 0.4s;
       }
 
       header .links a:hover,
@@ -70,6 +69,7 @@
       header .links a:active {
         color: rgba(255, 255, 255, 1);
         text-decoration: underline;
+        transition: color 0s;
       }
 
       section {
@@ -81,17 +81,13 @@
   <body>
     <header>
       <h1>
-        <img
-          alt="Chris Antaki"
-          title="Hey! Check out my links below"
-          src="cloud.gif"
-        />
+        <img alt="Chris Antaki" title="Hay" src="cloud.gif" />
       </h1>
 
       <div class="links">
-        <a href="https://soundcloud.com/chrisantaki">SoundCloud</a>
-        <a href="https://www.instagram.com/0p3n3y3s/">Instagram</a>
-        <a href="https://www.facebook.com/chr1santaki">Facebook</a>
+        <a href="https://chrisantaki.bandcamp.com">Music</a>
+        <a href="https://www.instagram.com/0p3n3y3s">Social</a>
+        <a href="https://github.com/ChrisAntaki">Code</a>
       </div>
     </header>
   </body>
