--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="links">
         <a href="https://chrisantaki.bandcamp.com">Music</a>
         <a href="https://www.instagram.com/0p3n3y3s">Social</a>
-        <a href="https://github.com/ChrisAntaki">Code</a>
+        <a href="https://github.com/ChrisAntaki">Work</a>
       </div>
     </header>
   </body>
