Links open in new window

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       </h1>
 
       <div class="links">
-        <a href="https://chrisantaki.bandcamp.com">Music</a>
-        <a href="https://www.instagram.com/0p3n3y3s">Social</a>
-        <a href="https://github.com/ChrisAntaki">Work</a>
+        <a target="_blank" href="https://chrisantaki.bandcamp.com">Music</a>
+        <a target="_blank" href="https://www.instagram.com/0p3n3y3s">Social</a>
+        <a target="_blank" href="https://github.com/ChrisAntaki">Work</a>
       </div>
     </header>
   </body>
