Points Music link to YT

--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
       </h1>
 
       <div class="links">
-        <a target="_blank" href="https://chrisantaki.bandcamp.com">Music</a>
+        <a
+          target="_blank"
+          href="https://www.youtube.com/channel/UCG8kJ61U4icDtNCuuJ28i4A"
+          >Music</a
+        >
         <a target="_blank" href="https://www.instagram.com/0p3n3y3s">Social</a>
         <a target="_blank" href="https://github.com/ChrisAntaki">Work</a>
       </div>
