Links directly to song

--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
       </h1>
 
       <div class="links">
-        <a
-          target="_blank"
-          href="https://www.youtube.com/channel/UCG8kJ61U4icDtNCuuJ28i4A"
+        <a target="_blank" href="https://www.youtube.com/watch?v=V_-4J9W3K4g"
           >Music</a
         >
         <a target="_blank" href="https://www.instagram.com/0p3n3y3s">Social</a>
