--- a/index.html
+++ b/index.html
@@ -80,16 +80,15 @@
 
   <body>
     <header>
-      <h1>
-        <img alt="Chris Antaki" title="Hay" src="cloud.gif" />
-      </h1>
+      <h1 title="Chris Antaki">🎸🌊</h1>
 
       <div class="links">
-        <a target="_blank" href="https://www.youtube.com/watch?v=V_-4J9W3K4g"
+        <a target="_blank" href="https://www.twitch.tv/chrisantakimusic"
           >Music</a
         >
-        <a target="_blank" href="https://www.instagram.com/0p3n3y3s">Social</a>
-        <a target="_blank" href="https://github.com/ChrisAntaki">Work</a>
+        <a target="_blank" href="https://www.instagram.com/chrisantakimusic"
+          >Insta</a
+        >
       </div>
     </header>
   </body>
